[tool.poetry]
name = "appintel"
version = "1.0.1"
description = "A command line tool to search and compare prices of apps and music on the Apple Store"
authors = ["James Campbell <james@jamescampbell.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
certifi = "^2024.2.2"
chardet = "^5.2.0"
idna = "^3.7"
numpy = "^1.26.4"
pandas = "^2.2.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.31.0"
six = "^1.16.0"
urllib3 = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.scripts]
appintel = "appintel.appintel:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
